# rust_app_10x

./: Cargo.toml
.cargo/: config.toml
sql/dev_initial/: 01-create-schema.sql
src/: config.rs  ctx.rs  error.rs  main.rs  mod.rs
src/_dev_utils/: mod.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs
src/model/store/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
tests/: quick_dev.rs
