[package]
name = "axum_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"]}
#Axum
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"

cargo-watch = "8.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
